# SISE_WebMining-Challenge

./: .env-example  .gitignore  ARCHITECTURE.md  README.md  _analyse.py  explore.ipynb  keyboard_events.parquet  keyboard_replay.html  keyboard_replay.py  listener.py  main.py  mouse_events.parquet  pyproject.toml  replay_mouse.py  run.py  run_capture.py  run_server.py  training_ui.py
agent/: __init__.py  buffer.py  cli.py  client.py  listeners.py  session.py
agent/ui/: __init__.py  home.py  tray.py
app/api/: __init__.py  store.py
app/api/routes/: __init__.py  agent.py  dashboard.py  sentinel.py
app/collector/: __init__.py  keyboard_listener.py  mouse_listener.py
app/features/: __init__.py  extractor.py  feature_engineering.py
app/inference/: predictor.py
app/models/: __init__.py  base_model.py  random_forest.py  schema.py
app/services/: __init__.py  db_service.py  feature_service.py  ml_service.py  pygame_record_service.py  register_service.py
dashboard/: monitor.py
frontend/: index.html  sentinel.html
frontend/sentinel/: _header.html  _tab_live.html  _tab_metrics.html  _tab_replay.html  _tab_sessions.html  _tab_users.html  _tabnav.html
frontend/static/: sentinel.css  sentinel.js
predictor/: random_forest.pkl
scripts/: __init__.py  capture.py  create_supabase_tables.sql  server.py  setup_supabase.py  tray.py
