[project]
name = "sise-webmining-challenge"
version = "0.1.0"
description = "CLI Input Monitoring Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput>=1.7.7",
    "numpy>=2.4.2",
    "scikit-learn>=1.5.0",
    "rich>=13.7.0",
    "textual>=0.68.0",
    "click>=8.1.7",
    "sqlalchemy>=2.0.0",
    "pygame>=2.6.1",
    "flask>=3.1.3",
    "pystray>=0.19.5",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sise-monitor = "sise_webmining_challenge.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
